fixed blurry background

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     font-family: 'Work Sans', sans-serif;
     background: black;
-    background-image: url('images/background-ps4-controller.jpeg');
+    background-image: url('images/controller.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
